app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unbound-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: unbound-app
  template:
    metadata:
      labels:
        app: unbound-app
    spec:
      containers:
      - name: unbound
        image: docker.io/henriquemcc/unbound
        ports:
        - containerPort: 53
