LoadBalancer.yaml
apiVersion: v1
kind: Service
type: LoadBalancer
metadata:
  name: unbound-loadbalancer
spec:
  selector:
    app: unbound-app
  ports:
  - port: 53
    targetPort: 53
