Allow-Internet.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-internet-egress
spec:
  podSelector:
    matchLabels:
      app: unbound-app # Aplica apenas ao seu pod
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0 # Libera saída para qualquer IP IPv4
    ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 443 # Para o download da chave via HTTPS
